--- a/app/views/questions/new.html.slim
+++ b/app/views/questions/new.html.slim
@@ -1,1 +1,10 @@
 h1 new
+
+= form_with model: @question do |f|
+  = f.label :title
+  = f.text_field :title
+
+  = f.label :body
+  = f.text_area :body
+
+  = f.submit 'Ask'
