--- a/app/views/questions/new.html.slim
+++ b/app/views/questions/new.html.slim
@@ -1,5 +1,5 @@
 h1 new
-
+= render 'shared/errors', resource: @question
 = form_with model: @question do |f|
   = f.label :title
   = f.text_field :title
