all tests for delete questions are green

--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -1,2 +1,5 @@
-h1 = @question.title
+h1 = @question.title 
 p  = @question.body
+
+-if current_user&.author?(@question)
+  = link_to 'Delete question', @question, method: :delete, data: { confirm: 'Are you sure?' }
