add answer create_spec.rb. First test are green

--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -3,3 +3,16 @@ p  = @question.body
 
 -if current_user&.author?(@question)
   = link_to 'Delete question', @question, method: :delete, data: { confirm: 'Are you sure?' }
+
+h3 Answers
+
+- @question.answers.each do |answer|
+  p = answer.body
+  - if current_user&.author?(answer)
+    = link_to 'Delete answer', answer.question, method: :delete, data: { confirm: 'Are you sure?' }
+
+= form_for [@question, @answer] do |f|
+  = render 'shared/errors', resource: @answer
+  p = f.label :body, 'Your answer'
+  p = f.text_area :body
+  p = f.submit 'Answer'  
